--- a/src/app/shared/components/simple-dropdown/simple-dropdown.component.html
+++ b/src/app/shared/components/simple-dropdown/simple-dropdown.component.html
@@ -1,10 +1,19 @@
 <div class="simple-dropdown" [class.simple-dropdown--small]="small">
 
-  <div class="simple-dropdown" [class.simple-dropdown--active]="dropdownVisible">
-    <div class="simple-dropdown__header" [class.simple-dropdown__header--active]="dropdownVisible" (click)="toggleDropdown()">
+  <div class="simple-dropdown" [class.simple-dropdown--active]="dropdownVisible || showInstructions">
+    <div class="simple-dropdown__header" [class.simple-dropdown__header--active]="dropdownVisible || showInstructions" (click)="toggleDropdown()">
       <mat-icon *ngIf="icon" class="simple-dropdown__header__icon">{{icon}}</mat-icon>
       <span [style.min-width]="getWidth()" class="simple-dropdown__header__value">{{mapper(selectedOption)}}</span>
-      <mat-icon class="simple-dropdown__header__arrow" [class.simple-dropdown__header__arrow--disabled]="getOptions().length === 0" [class.arrow--rotate]="dropdownVisible">keyboard_arrow_down</mat-icon>
+      <mat-icon class="simple-dropdown__header__arrow" [class.simple-dropdown__header__arrow--disabled]="getOptions().length === 0" [class.arrow--rotate]="dropdownVisible || showInstructions">keyboard_arrow_down</mat-icon>
+    </div>
+
+    <div *ngIf="showInstructions" [style.height]="getHeightNumber() + 115 + 'px'" class="simple-dropdown__instructions">
+      <div [style.margin-top]="getHeightNumber() + 10 + 'px'">
+        <div class="text">You can switch between all of your accounts here</div>
+        <div class="actions">
+          <button mat-button (click)="dismissInstructions.emit(true)">DISMISS</button>
+        </div>
+      </div>
     </div>
 
     <div [style.height]="getHeight()" class="simple-dropdown__menu">
