Fix build issues (3)

--- a/src/app/authentication/invite-accept/invite-accept.component.html
+++ b/src/app/authentication/invite-accept/invite-accept.component.html
@@ -1,6 +1,6 @@
 <div class="accept-invite">
 
-  <div class="registration-form accept-invite__form" [class.with-instructions]="completeScreen && showAclInstructions">
+  <div class="registration-form accept-invite__form">
 
     <div class="registration-form__header">
       <img src="/assets/images/logo-registration.svg" alt="">
