--- a/src/app/shared/components/simple-dropdown/simple-dropdown.component.scss
+++ b/src/app/shared/components/simple-dropdown/simple-dropdown.component.scss
@@ -25,6 +25,10 @@
 
   }
 
+  &--instructions {
+    min-width: 185px;
+  }
+
   &--active {
     background: #F7F7F7;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
@@ -85,6 +89,7 @@
     width: calc(100% + 30px);
     left: -15px;
     background: #FFFCAB;
+    box-shadow: 2px 8px 8px rgba(0,0,0,0.25);
 
     .text {
       white-space: pre-wrap;
