--- a/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.scss
+++ b/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.scss
@@ -32,5 +32,11 @@
 }
 
 .event-type-options {
-  margin-left: 10px;
+  margin-left: auto;
+  cursor: pointer;
+}
+
+.mat-icon {
+  margin-left: inherit;
+  vertical-align: text-top;
 }
