--- a/src/app/authentication/account-info/account-info.component.html
+++ b/src/app/authentication/account-info/account-info.component.html
@@ -1,17 +1,34 @@
 <div class="info-blue-screen">
   <img class="logo" src="/assets/images/logo-white.svg" alt="">
 
-  <div class="text">{{text}}</div>
 
-  <img class="logo" src="/assets/images/logo-white.svg" alt="">
-  <button mat-button class="logout" (click)="logout()">SIGN OUT</button>
+  <div class="body">
 
-  <simple-dropdown
-    *ngIf="authService.getSixUser().acls.length !== 0"
-    [mapper]="mapAcl"
-    [selectedOption]="authService.activeAcl$ | async"
-    [options]="authService.getAcls()"
-    [icon]="'domain'"
-    (optionSelected)="changeAcl($event)">
-  </simple-dropdown>
+    <div class="header">
+      <div class="title">{{title}}</div>
+      <mat-icon>lock_outline</mat-icon>
+    </div>
+
+    <div class="content">{{text}}</div>
+
+    <div class="switcher" [matMenuTriggerFor]="switcherOptions" *ngIf="authService.getSixUser().acls.length > 0">
+      <div class="current">
+        <div>{{authService.getActiveAcl().account.name}}</div>
+        <mat-icon>keyboard_arrow_down</mat-icon>
+      </div>
+
+      <mat-menu #switcherOptions="matMenu" x-position="before" panelClass="'account-info-switcher'">
+        <button *ngFor="let acl of authService.getAcls()"
+                style="width: 260px"
+                mat-menu-item (click)="authService.changeActiveAcl(acl)">
+          {{acl.account.name}}
+        </button>
+      </mat-menu>
+    </div>
+
+    <div class="buttons">
+      <button mat-button (click)="logout()">SIGN OUT</button>
+      <button mat-button>CREATE ACCOUNT</button>
+    </div>
+  </div>
 </div>
