Fix table advanced component when used in tag view.

--- a/src/app/pages/components/entity-view-tag/entity-view-tag.component.html
+++ b/src/app/pages/components/entity-view-tag/entity-view-tag.component.html
@@ -19,6 +19,7 @@
                       [showPreferences]="false"
                       [dedicatedOptions]="true"
                       (deleteEntity)="deleteTag($event)"
+                      [associatedTags]="inAssociatedTags"
                       (deleteMultipleEntities)="deleteTags($event)"
                       (add)="addTag($event)"
                       (update)="updateTag($event)">
