--- a/src/app/payment/plan-payment/plan-payment.component.html
+++ b/src/app/payment/plan-payment/plan-payment.component.html
@@ -70,20 +70,20 @@
   <div class="column right" [class.payment-info-error]="transactionalError">
 
     <div class="title">
-      {{(!transactionalError ? 'PAYMENT_INFO_TITLE' : 'PAYMENT_DECLINE_TITLE') | translate}}
+      {{(!transactionalError ? 'PAYMENT_INFO_TITLE' : 'PAYMENT_DECLINETITLE') | translate}}
       {{plan.name}}
-      {{(!transactionalError ? 'PAYMENT_INFO_TIER' : 'PAYMENT_INFO_DECLINE') | translate}}
+      {{(!transactionalError ? 'PAYMENT_INFO_TIER' : 'PAYMENT_DECLINEINFO') | translate}}
     </div>
     <div class="subtitle" *ngIf="!transactionalError" (click)="changePlan.emit(true)">{{'PAYMENT_INFO_CHANGE' | translate}}</div>
     <div *ngIf="transactionalError" class="error-message">{{'PAYMENT_ERRORMESSAGE' | translate}}</div>
 
     <div class="details">
-      <div>{{(!transactionalError ? 'PAYMENT_INFO_TOTAL' : 'PAYMENT_BALANCE_DUE') | translate}}:</div>
+      <div>{{(!transactionalError ? 'PAYMENT_INFO_TOTAL' : 'PAYMENT_BALANCEDUE') | translate}}:</div>
       <div style="margin-left: auto">${{plan.price}}</div>
     </div>
 
     <div class="terms">{{'PAYMENT_OWNERTERMS' | translate}} <span class="licenseagreement" (click)="openOwnerTerms()">{{'PAYMENT_LICENSEAGREEMENT' | translate}}</span>.</div>
-    <button mat-button (click)="pay()">{{(!transactionalError ? 'PAYMENT_INFO_FINISH' : 'PAYMENT_REACTIVATE_ACCOUNT') | translate}}</button>
+    <button mat-button (click)="pay()">{{(!transactionalError ? 'PAYMENT_INFO_FINISH' : 'PAYMENT_COMPLETEPURCHASE') | translate}}</button>
   </div>
   </div>
 </div>
