Small design adjustments on payment alert components

--- a/src/app/billing-info/billing-info.component.html
+++ b/src/app/billing-info/billing-info.component.html
@@ -10,7 +10,7 @@
     <div>
       Your account has been suspended due to a problem with payment.
     </div>
-    <button mat-button [routerLink]="['/payment']">MAKE PAYMENT</button>
+    <button *ngIf="authService.getActiveAcl().role.isOwnerOrAdministrator()" mat-button [routerLink]="['/payment']">MAKE PAYMENT</button>
 
   </div>
 
