--- a/src/app/payment/plan-payment/plan-payment.component.scss
+++ b/src/app/payment/plan-payment/plan-payment.component.scss
@@ -13,6 +13,8 @@
 
   .error-row-above {
     background-color: #e02c4a;
+    border-radius: 4px 4px 0 0;
+    box-shadow: 0 4px 4px rgba(0,0,0,0.25);
   }
 
   .below {
@@ -41,12 +43,12 @@
 
     .left {
       background: #FAFAFA;
-      border-radius: 4px 0 0 4px;
+      border-radius: 0 0 0 4px;
     }
 
     .right {
       background: #E5F0F9;
-      border-radius: 0 4px 4px 0;
+      border-radius: 0 0 4px 0;
 
       button {
         padding-top: 5px;
