--- a/src/app/billing-info/billing-info.component.html
+++ b/src/app/billing-info/billing-info.component.html
@@ -10,28 +10,12 @@
     <div>
       Your account has been suspended due to a problem with payment.
     </div>
-    <button *ngIf="authService.getActiveAcl().role.isOwnerOrAdministrator()" mat-button [routerLink]="['/payment']">MAKE PAYMENT</button>
+    <button *ngIf="authService.getActiveAcl().role.isOwnerOrAdministrator()"
+            mat-button
+            [routerLink]="['/payment']">
+      MAKE PAYMENT
+    </button>
 
-  </div>
-
-  <div class="switcher" [matMenuTriggerFor]="switcherOptions">
-    <div class="current">
-      <div>{{authService.getActiveAcl().account.name}}</div>
-      <mat-icon>keyboard_arrow_down</mat-icon>
-    </div>
-
-    <mat-menu #switcherOptions="matMenu" x-position="before">
-      <button *ngFor="let acl of authService.getAcls()"
-              style="width: 260px"
-              mat-menu-item (click)="authService.changeActiveAcl(acl)">
-        {{acl.account.name}}
-      </button>
-    </mat-menu>
-  </div>
-
-  <div class="buttons">
-    <button mat-button>SIX SUPPORT</button>
-    <button mat-button (click)="authService.logout()">SIGN OUT</button>
   </div>
 
 </div>
