Retrieve credit cards from session on payment screen.

--- a/src/app/payment/payment/payment.component.html
+++ b/src/app/payment/payment/payment.component.html
@@ -34,7 +34,9 @@
     <plan-payment
       (changePlan)="changePlanEmitted()"
       (paymentSuccessful)="accountPaymentFinished()"
-      [plan]="plan">
+      [plan]="plan"
+      [isRecurringPayment]="isRecurringPayment"
+      [creditCards]="creditCards">
     </plan-payment>
   </div>
 
