Work on creating new account via registration flow

--- a/src/app/authentication/account-info/account-info.component.html
+++ b/src/app/authentication/account-info/account-info.component.html
@@ -34,7 +34,7 @@
 
     <div class="buttons">
       <button mat-button (click)="logout()">SIGN OUT</button>
-      <button mat-button>CREATE ACCOUNT</button>
+      <button mat-button [routerLink]="['/register']">CREATE ACCOUNT</button>
     </div>
   </div>
 </div>
