--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -34,11 +34,11 @@ $navigation-color: #5383C3;
     background-color: white;
 
     .logo {
-      height: 40px;
+      max-height: 40px;
     }
 
     .logo-small {
-      height: 40px;
+      max-height: 40px;
     }
   }
 
