--- a/src/app/payment/plan-payment/plan-payment.component.scss
+++ b/src/app/payment/plan-payment/plan-payment.component.scss
@@ -159,23 +159,6 @@
     }
   }
 
-  .process-overlay {
-    position: fixed;
-    display: flex;
-    font-family: "Roboto", serif;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vw;
-    background: linear-gradient(to bottom left, #4277C2, #2C98F0);
-
-    div {
-      margin: auto;
-      color: white;
-      font-size: 20px;
-    }
-  }
-
   .disable-pay {
     background-color: #7a7a7a !important;
   }
@@ -247,5 +230,27 @@
         color: #D00140;
       }
     }
+  }
+}
+
+.process-overlay {
+  position: fixed;
+  flex-direction: column;
+  display: flex;
+  font-family: "Roboto", serif;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background: linear-gradient(to bottom left, #4277C2, #2C98F0);
+
+  div {
+    margin: 15px auto 0;
+    color: white;
+    font-size: 20px;
+  }
+
+  svg {
+    margin: 10% auto 0;
   }
 }
