--- a/src/app/payment/payment/payment.component.html
+++ b/src/app/payment/payment/payment.component.html
@@ -1,6 +1,6 @@
 <div class="payment">
 
-  <img class="logo" src="/assets/images/logo-white.svg" alt="">
+  <img class="logo" src="{{'/assets/images/' + sidenavLogo}}" alt="">
 
   <div class="blue-screen__account-switcher">
     <simple-dropdown
