--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -267,17 +267,9 @@ app-topnav {
   }
 
   .logo {
-    width: 109px;
+    height: 38px;
     position: absolute;
     top: 15px;
     left: 15px;
-  }
-
-  simple-dropdown {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    font-family: "Roboto", serif;
-    font-size: 16px;
   }
 }
