Update logo images

--- a/src/assets/scss/_login.scss
+++ b/src/assets/scss/_login.scss
@@ -24,7 +24,7 @@
 
     .auth0-lock-header-logo {
       margin: auto !important;
-      height: 76px !important;
+      height: auto !important;
     }
   }
 
