--- a/src/app/payment/plan-payment/plan-payment.component.scss
+++ b/src/app/payment/plan-payment/plan-payment.component.scss
@@ -245,12 +245,22 @@
   background: linear-gradient(to bottom left, #4277C2, #2C98F0);
 
   div {
-    margin: 15px auto 0;
+    margin: 25px auto auto;
     color: white;
     font-size: 20px;
   }
 
-  svg {
-    margin: 10% auto 0;
+  .six-spinner, mat-spinner {
+    margin: auto auto 30px auto;
+  }
+
+  mat-spinner {
+    width: 150px;
+    height: 150px;
+
+    svg {
+      width: 150px;
+      height: 150px;
+    }
   }
 }
