Update account info modal styles

--- a/src/app/authentication/account-info/account-info.component.html
+++ b/src/app/authentication/account-info/account-info.component.html
@@ -20,7 +20,10 @@
       <div class="title">{{getTitle()}}</div>
       <mat-icon *ngIf="accountHasNoBilling(); else lock">attach_money</mat-icon>
       <ng-template #lock>
-        <mat-icon>lock_outline</mat-icon>
+        <mat-icon *ngIf="accountHasNoBilling(); else lock">attach_money</mat-icon>
+        <ng-template #lock>
+          <mat-icon>attach_money</mat-icon>
+        </ng-template>
       </ng-template>
     </div>
 
